--- a/css/style.css
+++ b/css/style.css
@@ -184,11 +184,11 @@ textarea::placeholder {
 .header-menu {
 	position: fixed;
     top: 0;
-    left: 0;              /* Cola na esquerda */
-    width: 100%;          /* Ocupa toda a largura */
-    max-width: 100%;      /* Remove o limite de 1200px */
-    transform: none;      /* Remove a centralização antiga */
-    border-radius: 0;     /* Remove bordas arredondadas se houver */
+    left: 0;             
+    width: 100%;        
+    max-width: 100%;     
+    transform: none;     
+    border-radius: 0;    
     background-color: transparent;
     /* box-shadow: 0px 4px 10px var(--shadowBlack);  */
     transition: all 0.35s ease; /* Animação suave na transição */
@@ -255,11 +255,16 @@ textarea::placeholder {
 }
 
 .header-nav ul li a:hover {
-	color: var(--lightGreen);
+	color: var(--principalGreen);
 }
 
+.header-nav ul li a:hover {
+	color: var(--principalGreen);
+}
 
-
+.is-opaque .header-nav ul li a:hover {
+	color: var(--darkGreen);
+}
 
 .social-sidebar {
     position: fixed;
