--- a/css/style.css
+++ b/css/style.css
@@ -1138,8 +1138,17 @@ a.partners-item:hover .partner-name {
 }
 
 .form-map iframe {
-	max-width: 100%;
-	filter: grayscale(50%);
+    max-width: 100%;
+	height: 250px;
+    filter: grayscale(20%) hue-rotate(130deg) saturate(1) contrast(1);
+    opacity: 0.9;
+    border-radius: 20px;
+    transition: filter 0.3s ease;
+}
+
+.form-map:hover iframe {
+    filter: grayscale(0%) hue-rotate(0deg) saturate(1);
+    opacity: 1;
 }
 
 .form-right {
@@ -1147,33 +1156,24 @@ a.partners-item:hover .partner-name {
 }
 
 .form-right form {
-	background-color: var(--white);;
-	padding: 60px 45px;
-	position: relative;
-	box-shadow: 0px -1px 8px 4px var(--shadowWarm);
-}
-
-.form-right form::before {
-	content: '';
-	width: 100%;
-	height: 10px;
-	background-color: var(--principalGreen);
-	position: absolute;
-	left: 0;
-	top: 0;
-	display: block;
+	background-color: var(--lightGreen); 
+    padding: 60px 45px;
+    position: relative;
+    box-shadow: 0px 10px 20px var(--lightGreen); 
+    border-radius: 20px;
 }
 
 .form-right form input,
 .form-right form textarea {
-	font-size: 14px;
-	display: block;
-	width: 100%;
-	padding: 22px 30px;
-	background-color: var(--bgInput);;
-	border: none;
-	outline: none;
-	margin-bottom: 24px;
+    font-size: 14px;
+    display: block;
+    width: 100%;
+    padding: 22px 30px;
+    background-color: var(--bgInput); 
+    border: 1px solid transparent; 
+    outline: none;
+    margin-bottom: 24px;
+    border-radius: 12px;
 }
 
 .form-button {
@@ -1187,9 +1187,9 @@ a.partners-item:hover .partner-name {
 .form-right form input:focus,
 .form-right form textarea:focus,
 .modal-form input:focus {
-    border: 1px solid var(--mediumGreen); /* Adiciona borda colorida */
-    background-color: var(--white);       /* Clareia o fundo */
-    box-shadow: 0 0 0 3px var(--lightGreen); /* Adiciona um "brilho" sutil externo */
+    /* border: 1px solid var(--mediumGreen); */
+    background-color: var(--white);
+   	box-shadow: 0 0 0 4px var(--mediumGreen);
     transition: all 0.3s ease;
 }
 
