--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ textarea::placeholder {
 }
 
 .def-btn {
-	background-color: var(--principalGreen);
+	background-color: #3A7568;
 	border-radius:30px;
 	padding: 15px 45px;
 	display: inline-block;
@@ -730,7 +730,7 @@ textarea::placeholder {
 
 .modal-form .form-button {
 	border-radius: 30px;
-    background-color: var(--principalGreen);
+    background-color: #3A7568;
     color: var(--white);
     max-width: 150px;
     width: 100%;
